--- a/index.html
+++ b/index.html
@@ -147,8 +147,11 @@
               <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <div class="row middle">
+                <span class="main-posts-sections">Lifestyle</span>
+                <i class='bx bxs-star'></i>
+              </div>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> Self-observation is the first step of inner unfolding</a></h3>
               <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
                 mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
               <time class="main-posts-time">May 02, 2021 3 min read Public</time>
@@ -160,8 +163,11 @@
               <img src="imgs/timur-romanov2.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Health</span>
-              <h3 class="main-posts-subtitle">The mind and body are not separate. what affects one, affects the other</h3>
+              <div class="row middle">
+                <span class="main-posts-sections">Health</span>
+                <i class='bx bxs-star'></i>
+              </div>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> The mind and body are not separate. what affects one, affects the other</a></h3>
               <p class="main-posts-text">his recital put the Captain into an ecstasy; he went from the lady to the gentleman, and from the gentleman to the lady, to enjoy alternately the sight of their distress...</p>
               <time class="main-posts-time">Mar 28, 2021 3 min read Paid</time>
             </div>
@@ -175,8 +181,8 @@
               <img src="imgs/kaizen-3.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Nature</span>
-              <h3 class="main-posts-subtitle">Autumn is a second spring when every leaf is a flower</h3>
+                <span class="main-posts-sections">Nature</span>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> Autumn is a second spring when every leaf is a flower</a></h3>
               <p class="main-posts-text">She then expatiated very warmly upon the advantages I should reap from her plan; talked in a high style of my future grandeur; assured me how heartily I should...</p>
               <time class="main-posts-time">May 02, 2021 4 min read Public</time>
             </div>
@@ -188,10 +194,10 @@
             </div>
             <div class="main-posts-main">
               <span class="main-posts-sections redline">Travel</span>
-              <h3 class="main-posts-subtitle">
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#">
                 Never let your memories be greater than your dreams
                 Travel
-                Never let your memories be greater than your dreams</h3>
+                Never let your memories be greater than your dreams</a></h3>
               <p class="main-posts-text">Before long the searchlight discovered some distance away a schooner with all sails set, apparently the same vessel which had been noticed earlier in the evening. The...</p>
               <time class="main-posts-time">May 02, 2021 4 min read Members
               </time>
@@ -209,13 +215,13 @@
                   class='bx bx-arrow-back bx-flip-horizontal icon-left'></i></a>
             </div>
             <div class="main-plan-box">
-              <h3 class="main-plan-subtitle">yelary</h3>
+              <h3 class="main-plan-subtitle">yelary</a></h3>
               <p class="main-plan-pricing"><span class="main-plan-pricing-span">$</span> 50</p>
               <span class="main-plan-save">Save 17%</span>
               <button class="main-plan-btn" type="button">Subscribe now</button>
             </div>
             <div class="main-plan-box">
-              <h3 class="main-plan-subtitle">monthly</h3>
+              <h3 class="main-plan-subtitle">monthly</a></h3>
               <p class="main-plan-pricing buttom"><span class="main-plan-pricing-span">$</span> 5</p>
 
               <button class="main-plan-btn" type="button">Subscribe now</button>
@@ -228,7 +234,7 @@
             </div>
             <div class="main-posts-main">
               <span class="main-posts-sections rozviy">Food</span>
-              <h3 class="main-posts-subtitle">Dramatically improve your cooking using just your imagination</h3>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> Dramatically improve your cooking using just your imagination</a></h3>
               <p class="main-posts-text">You cannot too assiduously attend to Madame Duval herself; but I would wish you to mix as little as possible with her associates, who are not likely to be among those...</p>
               <time class="main-posts-time">May 02, 2021 4 min read Paid
               </time>
@@ -240,8 +246,11 @@
               <img src="imgs/posts-img.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Lifestyle</span>
-              <h3 class="main-posts-subtitle">Self-observation is the first step of inner unfolding</h3>
+              <div class="row middle">
+                <span class="main-posts-sections">Lifestyle</span>
+                <i class='bx bxs-star'></i>
+              </div>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> Self-observation is the first step of inner unfolding</a></h3>
               <p class="main-posts-text">Almost instantly the whole truth of the transaction seemed to rush upon her
                 mind, and her wrath was inconceivably violent. She asked me a thousand questions in a...</p>
               <time class="main-posts-time">May 02, 2021 3 min read Public</time>
@@ -254,7 +263,7 @@
             </div>
             <div class="main-posts-main">
               <span class="main-posts-sections yellow">Inspiration</span>
-              <h3 class="main-posts-subtitle">It is during our darkest moments that we must focus to see the light</h3>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> It is during our darkest moments that we must focus to see the light</a></h3>
               <p class="main-posts-text">Mina took a growing interest in everything and I was rejoiced to see that the exigency of affairs was helping her to forget for a time the terrible experience of the night. She was very, very pale
                 ...</p>
               <time class="main-posts-time">Apr 24, 2021 3 min read Public
@@ -268,7 +277,7 @@
             </div>
             <div class="main-posts-main">
               <span class="main-posts-sections green">Technology</span>
-              <h3 class="main-posts-subtitle">Bangladesh has developed plastic alternative using jute</h3>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> Bangladesh has developed plastic alternative using jute</a></h3>
               <p class="main-posts-text">Dr. Johnson, as usual, spoke contemptuously of Colley Cibber. 'It is wonderful that a man, who for forty years had lived with the great and the witty, should have acquired so ill the talents of conversation: and he had but half to furnish; for one half of what he said was oaths.
                 ...</p>
               <time class="main-posts-time">Apr 18, 2021 3 min read Members
@@ -282,7 +291,7 @@
             </div>
             <div class="main-posts-main">
               <span class="main-posts-sections rozviy">Food</span>
-              <h3 class="main-posts-subtitle">I do not stick to rules when cooking. I rely on my imagination</h3>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#"> I do not stick to rules when cooking. I rely on my imagination</a></h3>
               <p class="main-posts-text">I walked down to the station with them, and then wandered through the streets of the little town, finally returning to the hotel, where I lay upon the sofa and tried to...</p>
               <time class="main-posts-time">Apr 12, 2021 4 min read Public
               </time>
@@ -294,8 +303,11 @@
               <img src="imgs/timur-romanov2.jpg" alt="self" width="240" height="240">
             </div>
             <div class="main-posts-main">
-              <span class="main-posts-sections">Health</span>
-              <h3 class="main-posts-subtitle">SThe mind and body are not separate. what affects one, affects the other</h3>
+              <div class="row middle">
+                <span class="main-posts-sections">Health</span>
+                <i class='bx bxs-star'></i>
+              </div>
+              <h3 class="main-posts-subtitle"> <a class="main-posts-link" href="#">The mind and body are not separate. what affects one, affects the other</a></h3>
               <p class="main-posts-text">his recital put the Captain into an ecstasy; he went from the lady to the gentleman, and from the gentleman to the lady, to enjoy alternately the sight of their distress.</p>
               <time class="main-posts-time">Mar 28, 2021 3 min read Paid
               </time>
@@ -372,16 +384,16 @@
         </nav>
       </div>
 
-      <div class="footer-end row between">
+      <div class="footer-end row between middle">
 
         <ul class="hero-list row middle">
           <li class="hero-item">
             <p>Follow:</p>
           </li>
-          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-twitter icon-socical'></i></a></li>
-          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-facebook icon-socical'></i></a></li>
-          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-instagram icon-socical'></i></a></li>
-          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-github icon-socical'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-twitter icon-socical icon-hover'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-facebook icon-socical icon-hover'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-instagram icon-socical icon-hover'></i></a></li>
+          <li class="hero-item"><a href="#" target="_blank"><i class='bx bxl-github icon-socical icon-hover'></i></a></li>
         </ul>
 
         <p class="footer-copy">
